# multi-cue-fusion-ws

./: .gitignore  README.md  asdf.cpp  flourish_mapping  run.sh  run1.sh
.catkin_tools/profiles/default/: devel_collisions.txt
data/: Eschikon_grid.txt  graph.g2o  gui_params.yaml  opt_params.yaml
data/output/: optimized_graph.g2o
flourish_mapping copy/cmake/: flourish_mappingConfig-version.cmake  flourish_mappingConfig.cmake
process_data/: process.py
src/catkin_simple/: CMakeLists.txt  README.md
src/geodetic_utils/geodetic_utils/: CMakeLists.txt
src/geodetic_utils/geotf/: CMakeLists.txt
src/geodetic_utils/geotf_python/: CMakeLists.txt
src/geodetic_utils/roscpp_initializer/: CMakeLists.txt
src/mcaps/: CMakeLists.txt  README.md
src/mcaps/cmake_modules/: FindG2O.cmake  FindSuiteSparse.cmake  Makefile
src/mcaps/forms/: mainwindow.ui
src/mcaps/include/: RMSEcalculator.h  cov_func_point_to_point.h  data_extractor.h  data_statistics.h  elevation_utils.h  g2o_optimizer.h  g2o_utils.h  geometryengine.h  graph_creator.h  interpolation_utils.h  mainwindow.h  nicp_utils.h  oglwidget.h  paramsUtils.h  stitching_utils.h
src/mcaps/src/: RMSEcalculator.cpp  data_extractor.cpp  data_statistics.cpp  g2o_optimizer.cpp  geometryengine.cpp  graph_creator.cpp  main.cpp  mainwindow.cpp  oglwidget.cpp
src/pose_graph/: CMakeLists.txt  README.md
src/pose_graph/include/pose_graph/: temporalgraph.h  temporalnode.h  tss_utils.h
src/pose_graph/launch/: create_bag_graph.launch  reduce_bag.launch
src/pose_graph/src/nodes/: build_graph.cpp  build_graph_generic.cpp  build_sync_graph.cpp  extract_image_registration_data.cpp  mergeBags.cpp  mergeSequentialBagsExample.cpp  reduce_graph.cpp
src/test_pkg/: CMakeLists.txt  test_pkg.cpp
